Use `Path.of` instead of `Paths.get`
Signed-off-by: Tategoto Azarasi <2724167997@qq.com>